<resources>
    <string name="app_name">Feeder App</string>

    <string name="login">Login</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="fetching_data">Fetching user</string>

    <string name="empty_list">Oops ! No records found..</string>

    <string name="empty_username">Enter username !</string>
    <string name="empty_password">Enter password !</string>
    <string name="hello">Hello </string>
    <string name="loading_from_server">ONLINE MODE\nLoading from server </string>
    <string name="loading_from_local">OFFLINE MODE\nLoading from local database </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="about_us_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
</resources>