<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:textSize="25sp" />



    <EditText
        android:singleLine="true"
        android:id="@+id/txt_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp" />

    <EditText
        android:singleLine="true"
        android:inputType="textPassword"
        android:id="@+id/txt_password"
        android:layout_width="match_parent"
        android:hint="@string/password"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text_style"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp" />


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_style"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>





</LinearLayout>